<resources>
    <string name="app_name">COS Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">刷新率</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings_usage1">1. 进入 显示与亮度 - 更多 - 屏幕刷新率，选智能切换</string>
    <string name="settings_usage2">2. 输入要设置的刷新率值，然后点击 `应用` 按钮</string>
    <string name="usage">卡最高帧率的做法就是把控制刷新率的值设置的特别小就可以了（原理未知），推荐设置 30，稳定会卡到最高帧率去\n不想稳定最高帧率的就清除本应用的数据即可。</string>
    <string name="set_hz">应用</string>
    <string name="go_setting">设置 - 显示与亮度</string>
    <string name="go_dev">开发者选项 - 去开启帧率显示</string>
    <string name="text_boot">开机自启</string>
    <string name="preference_file_key">settings</string>
    <string name="settings_boot">settings_boot</string>
    <string name="_30">30</string>
</resources>